--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/All.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/All.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} - All Users";
-	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
 	<li class="active">All Users</li>
 </ul>
 <h1>All Users</h1>
@@ -15,11 +15,11 @@
 				<td>
 					@i
 				</td>
-				<td><a href="@Url.Action("User")">
+				<td><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">
 					<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=40" /></a>
 				</td>
 				<td>
-					<h3><a href="@Url.Action("User")">{Username}</a></h3>
+					<h3><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">{Username}</a></h3>
 				</td>
 				<td>35 posts, 45 comments, 5 favorites </td>
 				<td style="text-align: right;"><a href="#">Add as Friend</a> </td>
