--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Profile";
-	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
-	<li><a href="@Url.Action("AllUsers")">All Users</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
 	<li class="active">{Username}</li>
 </ul>
 <h1>{Username}'s Profile</h1>
 <hr />
-@RenderPage("~/Views/RoughDraft/partials/UserProfileTabs.cshtml")
+@RenderPage("~/Views/Shared/partials/UserProfileTabs.cshtml")
 
 <div class="row">
 
