--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Overview.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Profile";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
+	ViewBag.ProfileOverviewClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
@@ -9,7 +10,7 @@
 </ul>
 <h1>{Username}'s Profile</h1>
 <hr />
-@RenderPage("~/Views/Shared/partials/UserProfileTabs.cshtml")
+@RenderPage("~/Views/Shared/partials/ProfileTabs.cshtml")
 
 <div class="row">
 
