--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Favorites.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/Profile/Favorites.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	ViewBag.Title = "{Forum Name} - {Username}'s Favorites";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
+	ViewBag.ProfileFavoritesClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
@@ -10,7 +11,7 @@
 </ul>
 <h1>{Username}'s Favorites</h1>
 <hr />
-@RenderPage("~/Views/Shared/partials/UserProfileTabs.cshtml")
+@RenderPage("~/Views/Shared/partials/ProfileTabs.cshtml")
 @for (var i = 1; i < 11; i++)
 {
 	<div class="row" style="margin-top: 0px; margin-bottom: 0px;">
@@ -19,7 +20,7 @@
 			<p><strong><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></strong> &ndash; This is
 				a favorite post. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta
 				sem malesuada magna mollis euismod. &mdash; <span style="text-align: right; font-size: smaller;">
-					<em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">Category</a>
+					<em>12:59 PM 12/31/2011</em> in <a href="@Url.RouteUrl("Category", new { categorySlug = "category-slug"})" class="label">Category</a>
 					&middot; <a href="#">Remove</a></span></p>
 			<hr />
 		</div>
